<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/pad16"
    android:padding="@dimen/pad16"
    android:id="@+id/dialog_item">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Contact"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/pad16" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxv_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxv_add_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eg_0807898789"
            android:maxLength="11"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad16"
        android:enabled="false"
        android:id="@+id/btn_add_contact"
        android:text="@string/add_contact" />

</LinearLayout>